Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -3,7 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>SIESTA-QETSc - Tags</title>
-        <link rel="stylesheet" href="http://keceli.github.io/siesta-qetsc/theme/css/main.css" />
+        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="SIESTA-QETSc Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -12,13 +13,13 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://keceli.github.io/siesta-qetsc/">SIESTA-QETSc </a></h1>
+                <h1><a href="/">SIESTA-QETSc </a></h1>
                 <nav><ul>
-                    <li><a href="http://keceli.github.io/siesta-qetsc/pages/about.html">About</a></li>
-                    <li><a href="http://keceli.github.io/siesta-qetsc/category/benchmarks.html">Benchmarks</a></li>
-                    <li><a href="http://keceli.github.io/siesta-qetsc/category/how-to-install.html">How to install?</a></li>
-                    <li><a href="http://keceli.github.io/siesta-qetsc/category/how-to-run.html">How to run?</a></li>
-                    <li><a href="http://keceli.github.io/siesta-qetsc/category/readme.html">Readme</a></li>
+                    <li><a href="/pages/about.html">About</a></li>
+                    <li><a href="/category/benchmarks.html">Benchmarks</a></li>
+                    <li><a href="/category/how-to-install.html">How to install?</a></li>
+                    <li><a href="/category/how-to-run.html">How to run?</a></li>
+                    <li><a href="/category/readme.html">Readme</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
@@ -35,9 +36,16 @@
                             <li><a href="http://bitbucket.org/keceli/siesta-qetsc">SIESTA-QETSc repo</a></li>
                             <li><a href="http://departments.icmab.es/leem/siesta/">SIESTA web page</a></li>
                             <li><a href="https://www.mcs.anl.gov/petsc/">PETSc</a></li>
-                            <li><a href="slepc.upv.es">SLEPc</a></li>
+                            <li><a href="http://slepc.upv.es">SLEPc</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
+                <div class="social">
+                        <h2>social</h2>
+                        <ul>
+                            <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+
+                        </ul>
+                </div><!-- /.social -->
         </section><!-- /#extras -->
 
         <footer id="contentinfo" class="body">
