--- a/archives.html
+++ b/archives.html
@@ -3,7 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>SIESTA-QETSc</title>
-        <link rel="stylesheet" href="http://keceli.github.io/siesta-qetsc/theme/css/main.css" />
+        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="SIESTA-QETSc Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -12,13 +13,13 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://keceli.github.io/siesta-qetsc/">SIESTA-QETSc </a></h1>
+                <h1><a href="/">SIESTA-QETSc </a></h1>
                 <nav><ul>
-                    <li><a href="http://keceli.github.io/siesta-qetsc/pages/about.html">About</a></li>
-                    <li><a href="http://keceli.github.io/siesta-qetsc/category/benchmarks.html">Benchmarks</a></li>
-                    <li><a href="http://keceli.github.io/siesta-qetsc/category/how-to-install.html">How to install?</a></li>
-                    <li><a href="http://keceli.github.io/siesta-qetsc/category/how-to-run.html">How to run?</a></li>
-                    <li><a href="http://keceli.github.io/siesta-qetsc/category/readme.html">Readme</a></li>
+                    <li><a href="/pages/about.html">About</a></li>
+                    <li><a href="/category/benchmarks.html">Benchmarks</a></li>
+                    <li><a href="/category/how-to-install.html">How to install?</a></li>
+                    <li><a href="/category/how-to-run.html">How to run?</a></li>
+                    <li><a href="/category/readme.html">Readme</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -26,13 +27,13 @@
 
 <dl>
     <dt>Thu 16 February 2017</dt>
-    <dd><a href="http://keceli.github.io/siesta-qetsc/sample-input-file.html">Sample input file</a></dd>
+    <dd><a href="/sample-input-file.html">Sample input file</a></dd>
     <dt>Thu 16 February 2017</dt>
-    <dd><a href="http://keceli.github.io/siesta-qetsc/how-to-install.html">How to install?</a></dd>
-    <dt>Sat 07 January 2017</dt>
-    <dd><a href="http://keceli.github.io/siesta-qetsc/benchmark-results-for-siesta-qetsc.html">Benchmark Results for SIESTA-QETSc</a></dd>
+    <dd><a href="/how-to-install.html">How to install?</a></dd>
+    <dt>Fri 06 January 2017</dt>
+    <dd><a href="/benchmark-results-for-siesta-qetsc.html">Benchmark Results for SIESTA-QETSc</a></dd>
     <dt>Tue 03 January 2017</dt>
-    <dd><a href="http://keceli.github.io/siesta-qetsc/qetsc.html">QETSc</a></dd>
+    <dd><a href="/qetsc.html">QETSc</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
@@ -42,9 +43,16 @@
                             <li><a href="http://bitbucket.org/keceli/siesta-qetsc">SIESTA-QETSc repo</a></li>
                             <li><a href="http://departments.icmab.es/leem/siesta/">SIESTA web page</a></li>
                             <li><a href="https://www.mcs.anl.gov/petsc/">PETSc</a></li>
-                            <li><a href="slepc.upv.es">SLEPc</a></li>
+                            <li><a href="http://slepc.upv.es">SLEPc</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
+                <div class="social">
+                        <h2>social</h2>
+                        <ul>
+                            <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+
+                        </ul>
+                </div><!-- /.social -->
         </section><!-- /#extras -->
 
         <footer id="contentinfo" class="body">
